--- a/GameSpace/res/values-pt-rBR/strings.xml
+++ b/GameSpace/res/values-pt-rBR/strings.xml
@@ -15,9 +15,9 @@
   -->
 
 <resources>
-    <string name="settings_title">Espaço de jogo</string>
+    <string name="settings_title">Área Gamer</string>
     <string name="settings_summary">Configure seus jogos com ferramentas úteis para melhorar a jogatina.</string>
-    <string name="app_selector_label">Escolha seu jogo</string>
+    <string name="app_selector_label">Selecione seus jogos</string>
     <string name="auto_brightness_disabled_title">Desativar brilho automático</string>
     <string name="auto_brightness_disabled_summary">Mantenha o brilho constante durante o jogo</string>
     <string name="heads_up_disabled_title">Desativar pop-up</string>
@@ -27,7 +27,7 @@
     <string name="game_list_add_title">Adicionar</string>
     <string name="game_remove_message">Tem certeza de que deseja remover %1$s da sua biblioteca?</string>
     <string name="app_search_title">Pesquisar</string>
-    <string name="three_screenshot_disabled_summary">Desativar temporariamente o gesto de três dedos para captura de tela durante o jogo</string>
+    <string name="three_screenshot_disabled_summary">Desativar temporariamente o gesto de três dedos para print de tela durante os jogos</string>
     <string name="three_screenshot_disabled_title">Desativar gesto de captura de tela</string>
     <string name="state_enabled">Ativado</string>
     <string name="state_disabled">Desativado</string>
@@ -42,9 +42,9 @@
     <string name="heads_up_title">Notificações pop-up</string>
     <string name="fps_Info_title">Informação de FPS</string>
     <string name="stay_awake_title">Manter tela ligada</string>
-    <string name="stay_awake_summary">Mantenha a tela ligada durante o jogo</string>
+    <string name="stay_awake_summary">Mantenha a tela ligada durante os jogos</string>
 
-    <string name="ringer_mode_title">Modo de som durante o jogo</string>
+    <string name="ringer_mode_title">Modo de som durante os jogos</string>
     <string-array name="ringer_mode_entries">
         <item>Silencioso</item>
         <item>Vibrar</item>
@@ -52,8 +52,8 @@
         <item>Não alterar</item>
     </string-array>
 
-    <string name="suppress_fullscreen_intent_title">Bloquear tela cheia</string>
-    <string name="suppress_fullscreen_intent_summary">Impedir que eventos em tela cheia, como chamadas recebidas, apareçam durante o jogo</string>
+    <string name="suppress_fullscreen_intent_title">Bloquear notificações de tela cheia</string>
+    <string name="suppress_fullscreen_intent_summary">Impedir que eventos em tela cheia, como chamadas recebidas, apareçam durante os jogos</string>
 
     <string name="per_app_title">Configurar Jogo</string>
     <string name="per_app_mode_title">Modo Preferido</string>
@@ -69,4 +69,18 @@
 
     <string name="per_app_unregister">Remover %1$s da biblioteca</string>
 
+    <string name="gamespace_menu_opacity_title">Nível de opacidade do menu</string>
+    <string name="quick_start_apps_title">Jogos de início rápido</string>
+    <string name="quick_start_apps_summary">Selecione jogos para iniciar rapidamente</string>
+
+    <string name="in_game_calls_title">Chamada no jogo</string>
+    <string name="in_game_calls_no_action">Nenhuma ação</string>
+    <string name="in_game_calls_auto_answer">Resposta automática</string>
+    <string name="in_game_calls_auto_reject">Rejeição automática</string>
+    <string name="in_game_calls_received_number">Chamada recebida de %1$s</string>
+    <string name="in_game_calls_rejected_number">Chamada rejeitada de %1$s</string>
+    <string name="in_game_notifications_title">Notificações no jogo</string>
+    <string name="in_game_notifications_hide">Não mostre</string>
+    <string name="in_game_notifications_headsup">Mostrar como aviso</string>
+    <string name="in_game_notifications_danmaku">Mostrar como Danmaku</string>
 </resources>
